    in repeated character loops from pcre_uchar to pcre_uint32 also gave speed
    improvements.

6.  Fix forward search in JIT when link size is 3 or greater. Also removed some
    unnecessary spaces.
    
7.  Adjust autogen.sh and configure.ac to lose warnings given by automake 1.12
    and later. 

8.  Fix two buffer over read issues in 16 and 32 bit modes. Affects JIT only.


Version 8.32 30-November-2012
-----------------------------

1.  Improved JIT compiler optimizations for first character search and single
    character iterators.

2.  Supporting IBM XL C compilers for PPC architectures in the JIT compiler.
    Patch by Daniel Richard G.

3.  Single character iterator optimizations in the JIT compiler.

4.  Improved JIT compiler optimizations for character ranges.

5.  Rename the "leave" variable names to "quit" to improve WinCE compatibility.
    Reported by Giuseppe D'Angelo.

6.  The PCRE_STARTLINE bit, indicating that a match can occur only at the start
    of a line, was being set incorrectly in cases where .* appeared inside
    atomic brackets at the start of a pattern, or where there was a subsequent
    *PRUNE or *SKIP.

7.  Improved instruction cache flush for POWER/PowerPC.
    Patch by Daniel Richard G.

8.  Fixed a number of issues in pcregrep, making it more compatible with GNU
    grep:

    (a) There is now no limit to the number of patterns to be matched.

    (b) An error is given if a pattern is too long.

    (c) Multiple uses of --exclude, --exclude-dir, --include, and --include-dir
        are now supported.

    (d) --exclude-from and --include-from (multiple use) have been added.

    (e) Exclusions and inclusions now apply to all files and directories, not
        just to those obtained from scanning a directory recursively.

    (f) Multiple uses of -f and --file-list are now supported.

    (g) In a Windows environment, the default for -d has been changed from