@@ -34,6 +34,8 @@ Version 8.33 xx-xxxx-201x
 
 8.  Fix two buffer over read issues in 16 and 32 bit modes. Affects JIT only.
 
+9.  Optimizing fast_forward_start_bits in JIT.
+
 
 Version 8.32 30-November-2012
 -----------------------------
